--- a/Capstone Project/ibm_data_science_capstone_project.ipynb
+++ b/Capstone Project/ibm_data_science_capstone_project.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -32,6 +32,191 @@
    ],
    "source": [
     "print (\"Hello Capstone Project Course!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/stephenspicher/anaconda3/lib/python3.8/site-packages/sklearn/utils/deprecation.py:143: FutureWarning: The sklearn.datasets.samples_generator module is  deprecated in version 0.22 and will be removed in version 0.24. The corresponding classes / functions should instead be imported from sklearn.datasets. Anything that cannot be imported from sklearn.datasets is now part of the private API.\n",
+      "  warnings.warn(message, FutureWarning)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt # plotting library\n",
+    "# backend for rendering plots within the browser\n",
+    "%matplotlib inline \n",
+    "\n",
+    "from sklearn.cluster import KMeans \n",
+    "from sklearn.datasets.samples_generator import make_blobs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Peer-graded Assignment: Segmenting and Clustering Neighborhoods in Toronto"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "wiki_url = 'http://en.wikipedia.org/wiki/List_of_postal_codes_of_Canada:_M' ## Define the url we want to scrape from\n",
+    "\n",
+    "dfs = pd.read_html(wiki_url, header = 0) ## Get the list of dataframes from Wikipedia using the pandas read_html method\n",
+    "df = dfs[0] ## The table we want is the first (0) dataframe in the list\n",
+    "df = df[df.Borough!='Not assigned'] ## Remove rows with a Borough is Not assigned"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Postal Code</th>\n",
+       "      <th>Borough</th>\n",
+       "      <th>Neighbourhood</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>M3A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Parkwoods</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>M4A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Victoria Village</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>M5A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Regent Park, Harbourfront</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>M6A</td>\n",
+       "      <td>North York</td>\n",
+       "      <td>Lawrence Manor, Lawrence Heights</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>M7A</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Queen's Park, Ontario Provincial Government</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>160</th>\n",
+       "      <td>M8X</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>The Kingsway, Montgomery Road, Old Mill North</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>165</th>\n",
+       "      <td>M4Y</td>\n",
+       "      <td>Downtown Toronto</td>\n",
+       "      <td>Church and Wellesley</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>168</th>\n",
+       "      <td>M7Y</td>\n",
+       "      <td>East Toronto</td>\n",
+       "      <td>Business reply mail Processing Centre, South C...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>169</th>\n",
+       "      <td>M8Y</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Old Mill South, King's Mill Park, Sunnylea, Hu...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>178</th>\n",
+       "      <td>M8Z</td>\n",
+       "      <td>Etobicoke</td>\n",
+       "      <td>Mimico NW, The Queensway West, South of Bloor,...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>103 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    Postal Code           Borough  \\\n",
+       "2           M3A        North York   \n",
+       "3           M4A        North York   \n",
+       "4           M5A  Downtown Toronto   \n",
+       "5           M6A        North York   \n",
+       "6           M7A  Downtown Toronto   \n",
+       "..          ...               ...   \n",
+       "160         M8X         Etobicoke   \n",
+       "165         M4Y  Downtown Toronto   \n",
+       "168         M7Y      East Toronto   \n",
+       "169         M8Y         Etobicoke   \n",
+       "178         M8Z         Etobicoke   \n",
+       "\n",
+       "                                         Neighbourhood  \n",
+       "2                                            Parkwoods  \n",
+       "3                                     Victoria Village  \n",
+       "4                            Regent Park, Harbourfront  \n",
+       "5                     Lawrence Manor, Lawrence Heights  \n",
+       "6          Queen's Park, Ontario Provincial Government  \n",
+       "..                                                 ...  \n",
+       "160      The Kingsway, Montgomery Road, Old Mill North  \n",
+       "165                               Church and Wellesley  \n",
+       "168  Business reply mail Processing Centre, South C...  \n",
+       "169  Old Mill South, King's Mill Park, Sunnylea, Hu...  \n",
+       "178  Mimico NW, The Queensway West, South of Bloor,...  \n",
+       "\n",
+       "[103 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
    ]
   },
   {
